--- a/app/assets/stylesheets/landing_page/sections/hero.scss
+++ b/app/assets/stylesheets/landing_page/sections/hero.scss
@@ -91,6 +91,7 @@
 
 .hero__search-bar {
   @include prefix-val(display, flex);
+  @include prefix-prop(flex-shrink, 1);
   margin: 0 auto;
   max-width: 532px;
 }
@@ -157,7 +158,7 @@
   padding: 0;
   border-radius: 0px 29.5px 29.5px 0px;
 
-  padding: 14px 28px;
+  padding: 14px 32px 14px 28px;
 
   line-height: 32px;
 
