--- a/app/assets/stylesheets/landing_page/reset.scss
+++ b/app/assets/stylesheets/landing_page/reset.scss
@@ -1,3 +1,5 @@
+@import "./mixins/all";
+
 /* ************************************************************************************ */
 /* Own resets                                                                           */
 /* ************************************************************************************ */
@@ -23,4 +25,10 @@ a {
 
 hr {
   margin: 0;
+}
+
+* {
+  // See https://github.com/philipwalton/flexbugs#1-minimum-content-sizing-of-flex-items-not-honored
+  @include prefix-prop(flex-shrink, 0);
+  @include prefix-prop(flex-basis, auto);
 }
