--- a/app/views/landing_page/landing_page.erb
+++ b/app/views/landing_page/landing_page.erb
@@ -29,7 +29,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title><%= settings["marketplace_name"]["value"] %></title>
+  <title><%= page["title"]["value"] %></title>
 
   <!-- SEO Meta -->
   <!--
