--- a/app/assets/stylesheets/landing_page/sections/hero.scss
+++ b/app/assets/stylesheets/landing_page/sections/hero.scss
@@ -243,6 +243,14 @@
 
   padding: 18px 36px;
 
+  // Hover color is used to indicate tab focus.
+  // The hover color is set in the layout
+  outline: none;
+
+  &:hover {
+    @include hover-transition;
+  }
+
   @media #{$tablet} {
     font-size: 21px;
     letter-spacing: 0px;
