--- a/app/views/landing_page/_footer.erb
+++ b/app/views/landing_page/_footer.erb
@@ -26,7 +26,7 @@
       <% if has_links %>
         <ul class="footer__link-list">
           <% s['links'].each do |link| %>
-            <li class="footer__link-list-item"><a class="footer__link" href="<%= link['href']['path'] %>"><%= link["label"] %></a></li>
+            <li class="footer__link-list-item"><a class="footer__link" href="<%= link['href']['value'] %>"><%= link["label"] %></a></li>
           <% end %>
         </ul>
       <% end %>
