Link to landing page in header

--- a/app/views/layouts/_global_header.haml
+++ b/app/views/layouts/_global_header.haml
@@ -44,7 +44,7 @@
       If necessary, the buttons will overlap with the logo. Buttons should be on top, that's
       keep the logo here after buttons
     .header-left.header-logo-container
-      = link_to homepage_path, :class => "header-logo", :id => "header-logo" do
+      = link_to landing_page_path, :class => "header-logo", :id => "header-logo" do
         - if @current_community.logo.present?
           %i.header-square-logo.hidden-tablet
             -# Logo is here, it's a CSS background
