--- a/app/views/homepage/_list_item_with_distance.haml
+++ b/app/views/homepage/_list_item_with_distance.haml
@@ -31,7 +31,7 @@
           = link_to listing_path(listing.url) do
             = listing.title
             - if @current_community.show_category_in_listing_list
-              %a.browsing-list-item-share-type-link{ href: root_path( transaction_type: shape_name_map[listing.listing_shape_id], view: :list)}
+              %a.browsing-list-item-share-type-link{ href: search_path( transaction_type: shape_name_map[listing.listing_shape_id], view: :list)}
                 = icon_tag(listing.icon_name, ["icon-fix"])
                 = shape_name(listing)
         - distance = Maybe(listing.distance).or_else(nil)
