--- a/app/views/settings/unsubscribe.haml
+++ b/app/views/settings/unsubscribe.haml
@@ -2,7 +2,7 @@
   - if unsubscribe_successful
     %h2
       = t("settings.notifications.unsubscribe_succesful")
-    = t("settings.notifications.unsubscribe_info_text", :settings_link => link_to(t("settings.notifications.settings_link"), notifications_person_settings_path(:person_id => target_user.username)), :homepage_link => link_to(t("settings.notifications.homepage_link"), root_path) ).html_safe
+    = t("settings.notifications.unsubscribe_info_text", :settings_link => link_to(t("settings.notifications.settings_link"), notifications_person_settings_path(:person_id => target_user.username)), :homepage_link => link_to(t("settings.notifications.homepage_link"), search_path) ).html_safe
   - else
     %h2
       = t("settings.notifications.unsubscribe_unsuccesful")
