--- a/app/views/community_mailer/community_updates.html.haml
+++ b/app/views/community_mailer/community_updates.html.haml
@@ -13,12 +13,12 @@
                       %td{:valign => "top", :width => "90%"}
                         %h1{:style => "font-family:Helvetica Neue, Helvetica, Arial, sans-serif;font-weight:400;font-size:18px;margin-top:20px;margin-bottom:5px; padding: 20px; background: #ebebeb;text-align: left;line-height:22px;"}
                           %span{:style => "color:#464646;"}
-                            = t("emails.community_updates.update_mail_title", :title_link => link_to(@title_link_text, root_url(@url_params))).html_safe
+                            = t("emails.community_updates.update_mail_title", :title_link => link_to(@title_link_text, search_url(@url_params))).html_safe
                         %div{:style => "font-family:Helvetica Neue, Helvetica, Arial, sans-serif;font-size:16px;line-height:22px; padding: 10px 0;text-align:left;"}
                           %p
                             = t("emails.newsletter.hi", :name => link_to(@recipient.given_name_or_username, person_url(@recipient, @url_params))).html_safe
                           %p
-                            = t("emails.community_updates.intro_paragraph", :community_link => link_to(t("emails.community_updates.intro_paragraph_link_text", :community_name => @community.full_name(I18n.locale)), root_url(@url_params)), :time_since_last_update => @time_since_last_update).html_safe
+                            = t("emails.community_updates.intro_paragraph", :community_link => link_to(t("emails.community_updates.intro_paragraph_link_text", :community_name => @community.full_name(I18n.locale)), search_url(@url_params)), :time_since_last_update => @time_since_last_update).html_safe
                       %td{:width => "5%"}
                     %tr
                       %td{:width => "5%"}
