--- a/app/views/landing_page/landing_page.erb
+++ b/app/views/landing_page/landing_page.erb
@@ -103,6 +103,7 @@
     <% # Styles from section partials. E.g. styles that need marketplace color %>
     <%= yield :hero_css %>
     <%= yield :footer_css %>
+    <%= yield :info_css %>
   </style>
 
 </head>
