Button hover animations

--- a/app/assets/stylesheets/landing_page/mixins/_buttons.scss
+++ b/app/assets/stylesheets/landing_page/mixins/_buttons.scss
@@ -23,4 +23,9 @@ You may want to override following properties:
   border-width: $button-border-size;
   border-style: solid;
   border-color: transparent;
+
+  &:hover {
+    @include hover-transition;
+    color: #FFF;
+  }
 }
