--- a/app/assets/stylesheets/landing_page/sections/info.scss
+++ b/app/assets/stylesheets/landing_page/sections/info.scss
@@ -169,6 +169,10 @@ $content-padding: 36px;
   }
 }
 
+.info__column-icon {
+  margin-bottom: 24px;
+}
+
 .info__column-title {
   color: #525961;
   font-family: ProximaNovaSoft-Medium;
