--- a/app/views/landing_page/_icon.erb
+++ b/app/views/landing_page/_icon.erb
@@ -1,3 +1,5 @@
+<% # These icons are not part of the Sharetribe MIT license %>
+
 <% case icon %>
 <% when "quill" %>
   <svg viewBox="480 361 60 60" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round" stroke="none" stroke-width="2"><path d="M481 419.5l57-57M538 362.5s-5.183 23.182-17 35c-11.818 11.818-21.626 12.487-26.016 8.096-4.391-4.39-4.802-16.278 7.016-28.096 2.524-2.522 5.217-4.202 9-6v8s5-4.956 5-10c10.637-4.665 22-7 22-7zM518.953 399.453L513 393.5M522.451 395.951l-5.45-5.45"/></g></svg>
@@ -9,3 +11,5 @@
   <svg viewBox="2700 840 60 61" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round" stroke="none" stroke-width="2"><path d="M2759 870.5c0 16.017-12.984 29-29 29-16.018 0-29-12.983-29-29 0-16.016 12.982-29 29-29 16.016 0 29 12.984 29 29z"/><path d="M2751.436 850.97s-1.263 6.922-6.306 9.444c-5.042-1.26-10.087 2.522-8.825 2.522 1.262 0 2.522 5.043 2.522 5.043 1.26 1.26 3.782 0 3.782 0 3.15 3.15-5.044 8.825-5.044 10.086 0 1.26 3.15 1.89 1.26 3.782-1.89 1.892-3.783 2.522-3.783 2.522 0 6.304-6.303 6.304-7.565 6.304-1.26 0-3.782-5.043-3.782-6.304 0-1.26 1.26-2.522 1.26-3.783 0-1.26-2.52-3.782-2.52-3.782 0-5.044-3.784-3.782-7.567-3.782-3.782 0-3.782-5.044-3.782-5.044s0-8.827 6.302-10.088c6.306-1.26 6.306 1.26 6.306 1.26 2.52 2.522 7.565 0 10.087 0 0 0 1.26-8.825-1.26-7.565-2.524 1.26-4.783.286-5.045-2.52-.367-3.943 11.004-6.306 11.004-6.306"/></g></svg>
 
 <% end %>
+
+<% # These icons are not part of the Sharetribe MIT license %>
