--- a/app/views/landing_page/_info.erb
+++ b/app/views/landing_page/_info.erb
@@ -47,7 +47,7 @@
 
       <% if s["button_title"] %>
         <% button_modifier = background_enabled ? "" : "--ghost" %>
-        <a class="info__button<%= button_modifier %> <%= section_id %>__info__button<%= button_modifier %>" href="<%= s["button_path"]["path"] %>"><%= s["button_title"] %></a>
+        <a class="info__button<%= button_modifier %> <%= section_id %>__info__button<%= button_modifier %>" href="<%= s["button_path"]["value"] %>"><%= s["button_title"] %></a>
       <% end %>
 
     <% when "multi_column" %>
@@ -73,7 +73,7 @@
             <p class="info__column-paragraph"><%= c["paragraph"] %></p>
 
             <% if c["button_title"] %>
-              <a class="info__button--ghost <%= section_id %>__info__button--ghost" href="<%= c['button_path']['path'] %>"><%= c["button_title"]%></a>
+              <a class="info__button--ghost <%= section_id %>__info__button--ghost" href="<%= c['button_path']['value'] %>"><%= c["button_title"]%></a>
             <% end %>
           </div>
         <% end %>
