Topbar avatar & profile menu (#2133)
* Avatar & profile dropdown WIP

* Open by hover

* Styling, actions

* Better stories

* Firefox compatibility hack :(

* Please Stylelint

* SVGO icons

* Various review fixes

* Separate avatar component

* Smarten CSS

* Fix prop mandatoriness

* Better name for a component

* Hide on mobile, fix paddings on tablet

* Show dropdown on hover

* Integrate to R&A

--- a/client/app/components/sections/Topbar/Topbar.css
+++ b/client/app/components/sections/Topbar/Topbar.css
@@ -50,3 +50,16 @@
 .topbarLogo {
   height: var(--Topbar_logoHeight);
 }
+
+.topbarAvatarDropdown {
+  padding: var(--Topbar_avatarMobilePadding);
+  font-family: var(--Topbar_fontFamily);
+  font-size: var(--Topbar_fontSize);
+  align-self: flex-start;
+  display: none;
+
+  @media (--Topbar_medium) {
+    display: block;
+    padding: var(--Topbar_avatarPadding);
+  }
+}
