Language menu uses different font-size

--- a/client/app/components/sections/Topbar/Topbar.css
+++ b/client/app/components/sections/Topbar/Topbar.css
@@ -45,6 +45,12 @@
       font-size: var(--Topbar_fontSize);
     }
   }
+
+
+  & .topbarLanguageMenuLabel {
+    font-size: var(--Menu_fontSizeSmall);
+  }
+
 }
 
 .topbarLogo {
