--- a/client/app/components/composites/Menu/Menu.css
+++ b/client/app/components/composites/Menu/Menu.css
@@ -46,7 +46,7 @@
 
 .menuContent {
   display: none;
-  z-index: 1;
+  z-index: var(--Menu_zIndex);
   background-color: var(--Menu_colorBackground);
   border: 1px solid var(--Menu_borderColor);
   border-radius: 3px;
