--- a/client/app/components/composites/Menu/Menu.css
+++ b/client/app/components/composites/Menu/Menu.css
@@ -12,7 +12,7 @@
 .menuLabel {
   display: inline-block;
   font-size: var(--Menu_fontSize);
-  padding: 18px 24px;
+  padding: var(--Menu_labelPaddingVertical) var(--Menu_labelPaddingHorizontal);
   white-space: nowrap;
   cursor: pointer;
 
