--- a/client/app/components/elements/MenuItem/MenuItem.css
+++ b/client/app/components/elements/MenuItem/MenuItem.css
@@ -26,6 +26,6 @@
   position: absolute;
   top: 0;
   left: -1px;
-  width: 0.5rem;
+  width: 0.5em; /* topbar can't trust root font-size due to old design */
   height: 100%;
 }
