--- a/app/assets/stylesheets/landing_page/sections/info.scss
+++ b/app/assets/stylesheets/landing_page/sections/info.scss
@@ -12,7 +12,7 @@
   @extend .info__section;
 
   color: #FFFFFF;
-  min-height: 80vh;
+  @include viewport-unit(min-height, 80vh);
   box-shadow: inset 0 0 0 999999px rgba(0, 0, 0, 0.65); /* is there any cleaner way? */
 }
 
@@ -24,7 +24,7 @@
 
 .info__content {
   text-align: center;
-  margin-top: -4.44vh; /* -50px, when content height is 900px, 80vh */
+  @include viewport-unit(margin-top, -4.44vh); /* -50px, when content height is 900px, 80vh */
 
   @media #{$tablet} {
     margin: 0 auto;
