--- a/app/views/listings/show.haml
+++ b/app/views/listings/show.haml
@@ -4,7 +4,7 @@
 - content_for :extra_javascript do
   :javascript
     window.ST.listing();
-  = javascript_include_tag "https://maps.google.com/maps/api/js?sensor=true"
+  = javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=#{@current_community.google_maps_key}&sensor=true"
 
 - content_for :title, raw(@listing.title)
 - content_for :meta_author, @listing.author.name(@current_community)
