--- a/app/views/listings/edit.haml
+++ b/app/views/listings/edit.haml
@@ -8,7 +8,7 @@
     });
 
 - content_for :extra_javascript do
-  = javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=#{@current_community.google_maps_key}&sensor=true"
+  = javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=#{@current_community.google_maps_key}"
 
 #new_listing_form.new-listing-form.centered-section
 
