--- a/app/views/listings/edit.haml
+++ b/app/views/listings/edit.haml
@@ -8,7 +8,9 @@
     });
 
 - content_for :extra_javascript do
-  = javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=#{@current_community.google_maps_key}"
+  - maps_key = @current_community.google_maps_key
+  - key_param = maps_key ? "?key=#{maps_key}" : ""
+  = javascript_include_tag "https://maps.googleapis.com/maps/api/js#{key_param}"
 
 #new_listing_form.new-listing-form.centered-section
 
