--- a/app/assets/stylesheets/landing_page/mixins/_dimensions.scss
+++ b/app/assets/stylesheets/landing_page/mixins/_dimensions.scss
@@ -1,6 +1,9 @@
 $dimension-mobile-margin: 24px;
 $dimension-mobile-margin-big: 36px;
 
+// Top/bottom margin for sections such as info, categories, listings etc.
+$dimension-section-margin: 96px;
+
 /*
 
 Divides given total area according to golden ratio:
