--- a/app/assets/stylesheets/landing_page/sections/categories.scss
+++ b/app/assets/stylesheets/landing_page/sections/categories.scss
@@ -327,7 +327,8 @@ $categories__mobile-gutter: 12px;
   background-size: cover;
   background-position: center;
   background-color: #FDFDFD;
-  box-shadow: inset 0 0 0 999999px rgba(0, 0, 0, 0.2); /* big enough number to cover the whole area */
+
+  box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.10), inset 0 0 0 999999px rgba(0, 0, 0, 0.2); /* big enough number to cover the whole area */
   width: 100%;
   height: 100%;
 
