--- a/client/app/components/sections/Topbar/Topbar.css
+++ b/client/app/components/sections/Topbar/Topbar.css
@@ -13,6 +13,7 @@
 
   @media (--Topbar_medium) {
     height: var(--Topbar_height);
+    padding: var(--Topbar_padding);
   }
 
   /* Base styles */
@@ -51,6 +52,22 @@
     font-size: var(--Menu_fontSizeSmall);
   }
 
+  & > * {
+    margin-right: var(--Topbar_itemSpacing);
+    &:last-child {
+      margin-right: 0;
+    }
+  }
+
+}
+
+.topbarSpacer {
+  display: none;
+
+  @media (--Topbar_medium) {
+    flex-grow: 30;
+    display: block;
+  }
 }
 
 .topbarLogo {
